Adding links to some articles based on my own news consumption today.

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -5,15 +5,13 @@
 
 *Photo by Rod Long via Unsplash*
 
-*<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
-
 <hr>
 
-- _**A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
+- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, early drafts, and copyediting the newsletter this week. Final edit is all me. For fuller detail, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._ <!-- Edit roster as needed. -->
 
-- _**Blurb Kate Zimina TK**_ <!-- Shout out designer affiliate -->
+- _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
 
-- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, early drafts, and copyediting the newsletter this week. Final edit is all me. For fuller detail, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._ <!-- Edit roster -->
+- _**Blurb Kate Zimina TK**_ <!-- Shout out new designer affiliate -->
 
 <hr>
 
@@ -21,15 +19,29 @@
 
 ### Five Things: April 20-26, 2025
 
-- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. Update late in the week. -->
-
-- New SEC chair <!-- Link tk -->
-
-- **Stablecoins are getting more intertwined with traditional banking.** Circle launches new payments network: https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network | Other moves in the space may be coming, in a stark reversal of Wall Street's earlier trend to shun stablecoins. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink))
+- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. Update late in the week. --> BTC surpassed market cap of Google. https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap | https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day | https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana
 
 - **U.S. antitrust cases:** Washington wants to break up Google. It's official. ([NBC News](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978)) WSJ coverage: https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink | Meta story from TechCrunch: https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/
 
-- tk
+- **Stablecoins are getting more intertwined with traditional banking.** Circle launches new payments network: https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network | Other moves in the space may be coming, in a stark reversal of Wall Street's earlier trend to shun stablecoins. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink))
+
+- New SEC chair Atkins sworn in. https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/ | https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850 | TRUMP memecoin surges on president's dinner. https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders
+
+- New stats from FBI on crypto fraud: https://www.theblock.co/post/351746/fbi-says-americans-over-60-lost-nearly-3-billion-to-crypto-scams-in-2024
+
+<!-- Some additional possibilities -->
+
+- https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june
+
+- https://www.theblock.co/post/351765/coinbase-hire-130-local-employees-in-new-charlotte-office
+
+- https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing
+
+- https://decrypt.co/316061/sbf-transferred-victimville-low-security-prison
+
+- https://decrypt.co/316027/open-source-video-generators-full-length-movies
+
+- https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle
 
 <hr>
 
