Adding some links based on NotebookLM prompt + other edits of my own

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,3 +1,11 @@
+<!--
+
+Links in new item mentioning Newsweek below, as well as additional links noted elsewhere in this draft, based on a prompt to NotebookLM's "discover" feature for adding new training data. Here's the prompt I ran:
+
+I'm working on a technology newsletter and looking for recent news articles or videos that I should mention, with hyperlinks. Could you suggest some, please? Make recommendations based on the sample newsletters I've included in your training data as markdown files and the sample articles I've included as hyperlinks in your training data. These assets demonstrate the sort of news stories I'm interested in. For the current newsletter, I'm only interested in stories published since April 20 by credible  news organizations.
+
+-->
+
 # tktk
 ## tktk
 
@@ -15,33 +23,25 @@
 
 <hr>
 
-**TKTK.** tktktk.
+**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+
+ Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+
+ Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+
+  Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
 
 ### Five Things: April 20-26, 2025
 
-- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. Update late in the week. --> BTC surpassed market cap of Google. https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap | https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day | https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana
+- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. Update late in the week. --> BTC surpassed market cap of Google. https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap | https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day | https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana | https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status | https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy | Solana whale: https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years <!-- Additional links suggested by NotebookLM -->
 
 - **U.S. antitrust cases:** Washington wants to break up Google. It's official. ([NBC News](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978)) WSJ coverage: https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink | Meta story from TechCrunch: https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/
 
-- **Stablecoins are getting more intertwined with traditional banking.** Circle launches new payments network: https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network | Other moves in the space may be coming, in a stark reversal of Wall Street's earlier trend to shun stablecoins. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink))
+- **Newsweek has been doing a bang-up job covering specific AI use cases lately.** Among them: https://www.newsweek.com/robots-race-humans-beijing-half-marathon-humanoid-2061818  | https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953 | https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193 | https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141 | | Topic page: https://www.newsweek.com/topic/artificial-intelligence
 
 - New SEC chair Atkins sworn in. https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/ | https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850 | TRUMP memecoin surges on president's dinner. https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders
 
-- New stats from FBI on crypto fraud: https://www.theblock.co/post/351746/fbi-says-americans-over-60-lost-nearly-3-billion-to-crypto-scams-in-2024
-
-<!-- Some additional possibilities -->
-
-- https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june
-
-- https://www.theblock.co/post/351765/coinbase-hire-130-local-employees-in-new-charlotte-office
-
-- https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing
-
-- https://decrypt.co/316061/sbf-transferred-victimville-low-security-prison
-
-- https://decrypt.co/316027/open-source-video-generators-full-length-movies
-
-- https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle
+- **Stablecoins are getting more intertwined with traditional banking.** Circle launches new payments network: https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network | Other moves in the space may be coming, in a stark reversal of Wall Street's earlier trend to shun stablecoins. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink))
 
 <hr>
 
@@ -55,15 +55,19 @@
 
 - De-dollarization? <!-- Recent JPM remark on it being more plausible post-tariffs. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs)) -->
 
-- Bosa video on AI distillation for CNBC. <!-- Link TK -->
+- Coinbase lobbying against crypto bill? https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing
 
-- TKTK
+- https://www.cbsnews.com/news/artificial-intelligence-google-deepmind-ceo-demis-hassabis-60-minutes-transcript/ <!-- Suggested by NotebookLM -->
+
+- https://decrypt.co/316027/open-source-video-generators-full-length-movies
+
+- https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle
+
+- https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june <!-- Suggested by NotebookLM -->
 
 ### Odds & Ends
 
-- **Robots suck at making Nikes.** <!-- Flesh out --> ([Wall Street Journal](https://www.wsj.com/economy/trade/why-its-so-difficult-for-robots-to-make-your-nike-sneakers-47b882b5?st=uLg1h4&reflink=desktopwebshare_permalink))
-
-- TK <!-- Maybe a May 4th item? The "holiday" is coming up. -->
+- **Robots suck at making Nikes.** Sneakers' complex designs and temperature-sensitive materials that change slightly according to the weather tend to thwart automation. ([Wall Street Journal](https://www.wsj.com/economy/trade/why-its-so-difficult-for-robots-to-make-your-nike-sneakers-47b882b5?st=uLg1h4&reflink=desktopwebshare_permalink))
 
 -  **People are using cannabis as... a pre-workout supplement?** Sounds like a terrible idea to me. But hey. Whatever gets you through Mile 26. ([Salon](https://www.salon.com/2025/04/19/couch-potatoes-no-more-stoners-are-using-cannabis-to-help-them-exercise-and-reach-a-runners-high/))
 
