Adding photo illustration by Melpo Tsiliaki × DALL·E 3

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,27 +1,31 @@
 <!--
 
-Links in new item mentioning Newsweek below, as well as additional links noted elsewhere in this draft, based on a prompt to NotebookLM's "discover" feature for adding new training data. Here's the prompt I ran:
+Adding new photo illustration and credit. Illo based on original photo downloaded from Unsplash. Link to original: https://unsplash.com/photos/black-and-white-vintage-car-scale-model-sbGITOEJMKM
 
-I'm working on a technology newsletter and looking for recent news articles or videos that I should mention, with hyperlinks. Could you suggest some, please? Make recommendations based on the sample newsletters I've included in your training data as markdown files and the sample articles I've included as hyperlinks in your training data. These assets demonstrate the sort of news stories I'm interested in. For the current newsletter, I'm only interested in stories published since April 20 by credible  news organizations.
+Modified it in DALL·E 3 with the following prompt:
+
+I would like to use the attached image in my newsletter, as the central figure reading a newspaper is really interesting to me. But the image is not wide enough. Could you please widen it by extending the background and foreground elements, such as the table and curtain?
 
 -->
 
-# tktk
+# AI tips for journalists <!-- Need AI prompts to generate better hed, subhead later, when lead item is finished. -->
 ## tktk
 
-![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1)
+![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
 
-*Photo by Rod Long via Unsplash*
+*Photo illustration by Melpo Tsiliaki × DALL·E 3*
 
 <hr>
 
-- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, early drafts, and copyediting the newsletter this week. Final edit is all me. For fuller detail, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._ <!-- Edit roster as needed. -->
+- _**NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** were used in production of the newsletter this week, with heavy editing by me. For full details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._ <!-- Edit roster as needed. -->
 
 - _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
 
 - _**Blurb Kate Zimina TK**_ <!-- Shout out new designer affiliate -->
 
 <hr>
+
+<!-- REPORTERTIP: Riff on recent experiments with NotebookLM. Feed old data and documents into the thing as training data. Use it for notetaking. Accelerate your learning about AI. -->
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
@@ -33,13 +37,14 @@ I'm working on a technology newsletter and looking for recent news articles or v
 
 ### Five Things: April 20-26, 2025
 
-- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. Update late in the week. --> BTC surpassed market cap of Google. https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap | https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day | https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana | https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status | https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy | Solana whale: https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years <!-- Additional links suggested by NotebookLM -->
+- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. Update late in the week. --> BTC surpassed market cap of Google. https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap | https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day | https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana | https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status | https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy | Solana whale: https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years | https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add | https://decrypt.co/316133/cme-group-to-debut-xrp-futures-following-solana-launch | https://decrypt.co/316090/elderly-americans-hit-hardest-by-9-3b-crypto-scam-wave-in-2024-fbi
 
 - **U.S. antitrust cases:** Washington wants to break up Google. It's official. ([NBC News](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978)) WSJ coverage: https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink | Meta story from TechCrunch: https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/
 
 - **Newsweek has been doing a bang-up job covering specific AI use cases lately.** Among them: https://www.newsweek.com/robots-race-humans-beijing-half-marathon-humanoid-2061818  | https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953 | https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193 | https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141 | | Topic page: https://www.newsweek.com/topic/artificial-intelligence
 
-- New SEC chair Atkins sworn in. https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/ | https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850 | TRUMP memecoin surges on president's dinner. https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders
+- New SEC chair Atkins sworn in. https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/ | https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850 | TRUMP memecoin surges on president's dinner. https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders | https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals | https://www.coindesk.com/markets/2025/04/24/cantor-equity-shares-surge-55-jump-another-15-pre-market-on-bitcoin-spac-deal-buzz |
+https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals
 
 - **Stablecoins are getting more intertwined with traditional banking.** Circle launches new payments network: https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network | Other moves in the space may be coming, in a stark reversal of Wall Street's earlier trend to shun stablecoins. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink))
 
