--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,13 +1,3 @@
-<!--
-
-Adding new photo illustration and credit. Illo based on original photo downloaded from Unsplash. Link to original: https://unsplash.com/photos/black-and-white-vintage-car-scale-model-sbGITOEJMKM
-
-Modified it in DALL·E 3 with the following prompt:
-
-I would like to use the attached image in my newsletter, as the central figure reading a newspaper is really interesting to me. But the image is not wide enough. Could you please widen it by extending the background and foreground elements, such as the table and curtain?
-
--->
-
 # AI tips for journalists <!-- Need AI prompts to generate better hed, subhead later, when lead item is finished. -->
 ## tktk
 
@@ -17,7 +7,7 @@ I would like to use the attached image in my newsletter, as the central figure r
 
 <hr>
 
-- _**NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** were used in production of the newsletter this week, with heavy editing by me. For full details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._ <!-- Edit roster as needed. -->
+- _**NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** were used in production of the newsletter this week, with heavy editing by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Edit roster as needed. -->
 
 - _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
 
