Edits by me to affiliate blurb, link, and banner placement.

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -7,11 +7,11 @@
 
 <hr>
 
-- _**NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** were used in production of the newsletter this week, with heavy editing by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Edit roster as needed. -->
+- _**I used NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** to assist production of this edition of w3w. Final edit 100% by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Editroster as needed. -->
 
-- _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
+- _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. To join them in supporting this work, check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
-- _**Blurb Kate Zimina TK**_ <!-- Shout out new designer affiliate -->
+- _**I'm also happy today** to introduce a new affiliate: Roobinium's Kate Zimina! She's that rare award-winning designer who understands web3, with experience creating [beautiful interfaces](https://dribbble.com/roobinium) for NFT apps, crypto wallets, and more. To get her help with your project, contact Kate via email digitaldesigner2047@gmail.com or via Telegram @digitaldesigner2047. When you hire Kate, a portion of your order will go toward supporting w3w. So everyone wins._ 😊
 
 <hr>
 
@@ -20,6 +20,19 @@
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
  Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+
+ Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+
+ Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+
+ Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+
+ <hr>
+
+ [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
+ https://dribbble.com/roobinium)
+
+ <hr>
 
  Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
 
@@ -38,13 +51,6 @@ https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hede
 
 - **Stablecoins are getting more intertwined with traditional banking.** Circle launches new payments network: https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network | Other moves in the space may be coming, in a stark reversal of Wall Street's earlier trend to shun stablecoins. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink))
 
-<hr>
-
-<!-- Insert banner add image -->
-
-![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)
-
-<hr>
 
 ### Looking Ahead
 
